# nyc_jobs_searcher

./: .gitignore  Makefile  README.md  setup.cfg  streamlit_app.py
jobs_searcher/: data_manager.py  models.py
jobs_searcher/utils/: common_logger.py
tests/: test_data_manager.py
