[metadata]
name = nyc_jobs_searcher
version = v0.0.1
author = Nathaniel Joselson
description = A Jobs searcher in NYC open data
url = https://github.com/Njoselson/nyc_jobs_searcher

[options]
packages = find:
install_requires =
    pydantic>=1.7.3

python_requires = >=3.9.5

[options.extras_require]
server =
    requests>=2.18.4
    streamlit>=1.13.0
    streamlit-pydantic>=0.5.0

tests =
    vulture>=2.3
    black>=21.9b0
    mypy>=0.910
    pytest>=6.2.5,<7.2.0
    typeguard>=2.13.3

dev =
    %(server)s
    %(tests)s

[mypy]
files = transcript_service
ignore_missing_imports = True
disallow_untyped_defs = True
warn_redundant_casts = True
install_types = True
non_interactive = True
